# multi-camera-calib

./: CMakeLists.txt  Citation.cff  README.md
cfg/: CameraCalibrationSettings.json  CameraCalibrationSettings.schema.json  record_video_Settings1024x768.json  record_video_Settings2048x1536.json
cmake/: config.h.in
data/pattern/: board_pattern.MCC_Patt
scripts/: build.sh  calibrate.sh  check_transform.py
src/: config.h  config_parser.cpp  config_parser.hpp  data.cpp  data.h  hardware_constants.h  load_pattern.h  main.cpp
